<resources>
    <string name="app_name">BiliMusic</string>
    <string name="play_info">播放信息</string>
    <string name="no_play">未播放</string>
    <string name="play_mode">播放模式</string>
    <string name="last_song">上一首</string>
    <string name="play">播放</string>
    <string name="next_song">下一首</string>
    <string name="playtime">空</string>
    <string name="no_playing">未播放</string>
    <string name="v1">播放信息</string>
    <string name="v2">播放模式</string>
    <string name="v4">播放</string>
    <string name="v3">上一首</string>
    <string name="v5">下一首</string>
    <string name="settings">设置</string>
    <string name="v6">播放控制</string>
    <string name="v7">定时关闭</string>
    <string name="v8">播放速度（0.5 –4.0）</string>
    <string name="v9">文件夹设置</string>
    <string name="v10">请输入音乐文件夹扫描路径</string>
    <string name="t2">恢复</string>
    <string name="t1">定时结束后自动关机</string>
    <string name="device_admin_description">用于实现定时播放结束后的自动关机功能</string>
    <string name="m2">音乐列表</string>
    <string name="_0_00">0:00</string>
    <string name="_4_30">4:30</string>
    <string name="t5">复制</string>
    <string name="t4">剪切</string>
    <string name="t3">粘贴</string>
    <string name="t6">全选</string>
    <string name="t7">取消</string>
    <string name="popup_copy">复制</string>
    <string name="popup_cut">剪切</string>
    <string name="popup_paste">粘贴</string>
    <string name="popup_select_all">全选</string>
    <string name="popup_cancel">取消</string>
    <string name="copied_to_clipboard">已复制到剪贴板</string>
    <string name="cut_to_clipboard">已剪切到剪贴板</string>
    <string name="pasted">已粘贴</string>
    <string name="_100">电量:100%</string>
    <string name="_10_08">上午10:08</string>
    <string name="t8">扫描路径设置</string>
    <string name="t9">界面设置</string>
    <string name="t10">封面大小:</string>
    <string name="v11">封面大小</string>
    <string name="r1">歌曲字体大小:</string>
    <string name="r2">字体大小</string>
    <string name="r3">定时结束自动关机</string>
    <string name="r4">取消启动动画</string>
    <string name="_30min">30min</string>
    <string name="r5">其他设置</string>
    <string name="r6">按钮间距：</string>
    <string name="r7">按钮间距</string>
</resources>