<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#4D4D4D"
    android:padding="0dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- 标题 -->
        <RelativeLayout
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#000000">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/settings"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </RelativeLayout>

        <!-- 定时关闭和播放速度设置 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/v6"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginBottom="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/TimedOff"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/v7"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/white"
                android:textSize="12sp"/>

            <EditText
                android:id="@+id/Playspeed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/v8"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:textColor="@color/white"
                android:textSize="12sp"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="#929292" />
        <!-- 扫描路径设置 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/t8"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginBottom="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/scanPathEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/v10"
                android:importantForAutofill="no"
                android:inputType="none"
                android:textColor="@color/white"
                android:textSize="12sp"/>

            <Button
                android:id="@+id/resetButton"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="@string/t2"
                android:textSize="15sp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="#929292" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/t9"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginBottom="4dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/t10"
                android:textSize="12sp"
                android:textColor="@color/white"/>
            <EditText
                android:id="@+id/ImageSize"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="35dp"
                android:hint="@string/v11"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/white"
                android:textSize="12sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/r1"
                android:textSize="12sp"
                android:textColor="@color/white"/>
            <EditText
                android:id="@+id/TextSize"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="35dp"
                android:hint="@string/r2"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/white"
                android:textSize="12sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/r6"
                android:textSize="12sp"
                android:textColor="@color/white"/>
            <EditText
                android:id="@+id/ButtonInterval"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="35dp"
                android:hint="@string/r7"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/white"
                android:textSize="12sp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="#929292" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/r5"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginBottom="4dp" />
        <CheckBox
            android:id="@+id/isPowerOffBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r3"
            android:textColor="@color/white"
            android:textSize="12sp"/>

        <CheckBox
            android:id="@+id/isAnimOffBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r4"
            android:textColor="@color/white"
            android:textSize="12sp"/>
    </LinearLayout>
</ScrollView>